--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "windbnb",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://EUrrutiaRuiz.github.io/AdoptAFriend/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tabler/icons-react": "^2.34.0",
@@ -24,6 +27,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "sass": "^1.67.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
