--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "windbnb",
+  "name": "feexercise",
   "private": true,
   "version": "0.0.0",
   "homepage": "https://EUrrutiaRuiz.github.io/AdoptAFriend/",
